# teste-rpa

./: .gitattributes  .gitignore  COMO_RODAR.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_cria_tabelas_iniciais.py  002_add_screenshot.py
src/: config.py  database.py  main.py
src/api/: dependencies.py
src/api/routes/: crawl_routes.py  job_routes.py  result_routes.py
src/models/: base_entity.py  crawl_job.py  hockey_team.py  oscar_film.py
src/queue/: rabbit_connection.py  rabbit_publisher.py
src/repositories/: base_repository.py  crawl_job_repo.py  hockey_team_repo.py  oscar_film_repo.py
src/schemas/: crawl_job_response.py  hockey_team_response.py  oscar_film_response.py
src/scrapers/: base_scraper.py  hockey_scraper.py  oscar_fail_scraper.py  oscar_scraper.py
src/worker/: consumer.py  job_handler.py
tests/integration/: conftest.py  test_repositories.py
tests/unit/: test_hockey_scraper.py  test_job_handler.py
