[project]
name = "scraper-service"
version = "0.1.0"
description = "Web scraping service with async job processing"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aio-pika>=9.5.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "testcontainers[postgres,rabbitmq]>=4.9.0",
    "httpx",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
